@@ -1,3 +1,8 @@
+2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* seahorse-key-manager.c: Fixed warnings during Key Manager
+	startup. Bug #327657
+	
 2006-01-22  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* configure.in: Made gedit plugin and panel applet soft
